--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                <img src="img/logo.png" alt="trillo logo" class="logo">
 
                <form action="#" class="search">
-                   <input type="text" class="search__input" placeholder="   Search Hotels">
+                   <input type="text" class="search__input" placeholder=" Search Hotels">
                    <button class="search__button">
                        <svg class="search__icon">
                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
@@ -47,7 +47,45 @@
 
            <div class="content">
                <nav class="sidebar">
-                    Navigation
+                    <ul class="side-nav">
+
+                        <li class="side-nav__item side-nav__item--active">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-home"></use>
+                                </svg>
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <svg class="side-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                                    </svg>
+                                    <span>Flight</span>
+                                </a>
+                        </li>
+                        <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <svg class="side-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                                    </svg>
+                                    <span>Car rental</span>
+                                </a>
+                        </li>
+                        <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <svg class="side-nav__icon">
+                                        <use xlink:href="img/sprite.svg#icon-map"></use>
+                                    </svg>
+                                    <span>Tours</span>
+                                </a>
+                        </li>
+                       
+                    </ul>
+                    <div class="legal">
+                        &copy; 2018 by Ante. All rights reserved.
+                    </div>
                </nav>
                <main class="hotel-view">
                    Hotel view
